[package]
name = "rust_native_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_native_app"
crate-type = ["cdylib"]

[dependencies]
# Tambahkan android-activity secara eksplisit
android-activity = "0.5"
android_logger = "0.13"
log = "0.4"

[dependencies.eframe]
version = "0.27"
default-features = false
features = ["glow", "android-native-activity", "default_fonts"]

[package.metadata.android]
package = "com.odfiz.rustnative"
label = "Odfiz UI Test"
build_targets = ["aarch64-linux-android"]
target_sdk_version = 30
min_sdk_version = 21

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
